# ascend_wenet

./: README.md  wenet.drawio  wenet.py  wenet.xlsx
cpp/: CMakeLists.txt  main.cpp  wenet.cpp  wenet.h
cpp/common/: ModelProcess.cpp  ModelProcess.h
cpp/decoder/: decoder.cpp.old  decoder.h
cpp/encoder/: encoder.cpp  encoder.h
cpp/feature_extrator/: fbank.h  fft.cc  fft.h  wav.h
cpp/swig_decoders/: ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h
cpp/third_part/: readme.md
python/: aclnet.py  decoder.py  encoder.py  feature_extractor.py  scoring.py  wenet适配指南.md
